--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "mysql2": "^1.5.3",
     "nodemon": "^1.17.3",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
