--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-NODE_ENV=development
-MYSQL_USERNAME=sikun
-MYSQL_PASSWORD=secret
-MYSQL_DATABASE=imageuploader
-MYSQL_HOSTNAME=localhost
-SECRET_KEY=imageUploaderLaporHama
-BASE_URL=http://localhost:3000/public/stylesheets/imageLaporHama/
+NODE_ENV=
+MYSQL_USERNAME=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_HOSTNAME=
+SECRET_KEY=
+BASE_URL=
